# chat-retro

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  feature_list.json  init.sh  pyproject.toml
.chat-retro-runtime/logs/: metrics.jsonl
.claude/: settings.json
.claude/agents/: issue-clustering.md  issue-prioritization.md  issue-resolution.md  issue-triage.md
build-log/: PROGRESS.md  init.sh
docs/: design-review-checklist.md  spec.md
docs/adr/: adr-001-agentic-architecture.md  adr-002-local-state-only.md
docs/archive/: spec-v1-deterministic-pipeline.md
docs/design/: design.md  impl-plan.md
docs/foundations/: spec.md
docs/foundations/adr/: adr-001-agentic-architecture.md  adr-003-offline-artifacts.md  adr-004-modal-data-safety.md  adr-005-agentic-issue-workflow.md  adr-006-issue-workflow-cli-migration.md  adr-007-github-ai-code-review.md
docs/iteration/: impl-plan.md  self-portrait-v2-eval.md
docs/reference/: agents.md  hooks.md  issue-reporting.md  runtime-files.md
src/chat_retro/: __init__.py  __main__.py  agents.py  artifacts.py  eval.py  hooks.py  insights.py  interactive.py  prompts.py  session.py  state.py  templates.py  usage.py
src/chat_retro/template_prompts/: self-portrait-v2.md  self-portrait.md
src/issue_workflow/: __init__.py  __main__.py  agents.py  cli.py  runner.py  state_manager.py  workflow.py
src/shared/: __init__.py  issue_reporter.py  issue_types.py
tests/: __init__.py  test_agents.py  test_artifacts.py  test_eval.py  test_hooks.py  test_insights.py  test_interactive.py  test_state.py  test_usage.py  test_viz.py
(+5 files in other folders)
