[project]
name = "chat-retro"
version = "0.1.0"
description = "Personal analysis tool for exported AI conversation history using agentic approach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
]

[project.scripts]
chat-retro = "chat_retro.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_retro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
